# Content-Craft

./: .gitattributes  .replit  DEPLOY_TO_VERCEL.md  package.json  pnpm-lock.yaml  pyproject.toml  railpack.json  render-build.sh  render-start.sh  render.yaml  replit.md  routes_list.txt  vercel.json
.agents/memory/: MEMORY.md  (+17 more)
.migration-backup/: .env.example  .replit  package.json  pnpm-lock.yaml  railway.json  replit.md  vercel.json
api/: index.js  pino-file.mjs  pino-worker.mjs
attached_assets/: Pasted--Selovox-V3-AI-Product-Studio-Completely-rebuild-the-cu_1782126085706.txt  Pasted--Upgrade-the-current-application-into-a-complete-AI-Dig_1781092342125.txt  Pasted-06-21-35-259-Running-build-in-Washington-D-C-USA-East-i_1781502627805.txt  Pasted-22-24-20-469-Running-build-in-Washington-D-C-USA-East-i_1782054253824.txt  Pasted-22-49-39-427-Running-build-in-Washington-D-C-USA-East-i_1781906264574.txt  Pasted-Act-as-a-senior-full-stack-engineer-I-need-to-link-our-_1782268172628.txt  Pasted-Act-as-a-senior-full-stack-engineer-I-need-to-link-our-_1782271326695.txt  Pasted-CRITICAL-PDF-ENGINE-UPGRADE-HIGHEST-PRIORITY-The-PDF-Pr_1781179127228.txt  Pasted-CRITICAL-WRITING-ENGINE-UPGRADE-The-current-writing-eng_1781483441741.txt  Pasted-Command-pnpm-run-vercel-build-exited-with-1-00-10-43-92_1781429279099.txt  Pasted-Continue-Carefully-professionally-updating-with-these-a_1781170132540.txt  Pasted-Continue-updating-with-bellow-one-afyer-the-other-and-t_1781797765081.txt  Pasted-Good-now-you-re-describing-a-real-integrated-Video-Mark_1782055698825.txt  (+11 more)
public/: index.html
(+882 files in other folders)
