[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "httpx>=0.28.1",
    "kokoro-onnx==0.4.0",
    "numpy==2.1.3",
    "onnxruntime==1.20.1",
    "pillow>=12.2.0",
    "pydub==0.25.1",
    "python-multipart==0.0.19",
    "soundfile==0.12.1",
    "uvicorn==0.32.1",
]
